Revert "Обновление Swagger API документации"
This reverts commit 4eca9e8ba32257a58a36364925c8baeff4fbe254.
